Foi arrumado para salvar datas no cadastro do cliente

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,7 @@
 include.path=\
     ${php.global.include.path}:\
-    C:\\xampp\\htdocs\\www\\Yii\\framework
+    C:\\xampp\\htdocs\\www\\Yii\\framework:\
+    C:\\xampp\\htdocs\\Yii\\framework
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
